Remove ASM and complete the JDK 25 Class-File API migration