@@ -307,8 +307,6 @@ public final class MvccRawStoreLogicalLockingTest extends MvccSqlTestSupport {
                 javaExecutable(),
                 "--enable-preview",
                 "--add-exports",
-                "java.base/jdk.internal.org.objectweb.asm=ALL-UNNAMED",
-                "--add-exports",
                 "java.base/sun.security.action=ALL-UNNAMED",
                 "--add-opens",
                 "java.base/java.nio=ALL-UNNAMED",
